# value-python

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: .env.example  async_example.py  async_example_simple.py  gemini_autoinstrument_test.py  live_data.py  otel_test.py  sync_example.py
scripts/: release.sh
src/value/: __init__.py  _api.py  actions.py  client.py  decorators.py  instrumentation.py  tracing.py
src/value/internal/: __init__.py  _api.py  actions.py  config.py  span_processor.py  tracing.py
tests/: test_client.py  test_config.py  test_decorators.py  test_instrumentation.py
